--- a/app/src/main/res/layout/category_child_item.xml
+++ b/app/src/main/res/layout/category_child_item.xml
@@ -2,10 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginVertical="8dp">
 
     <TextView
         android:id="@+id/itemTxt"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:textSize="16dp"
+        android:layout_marginLeft="32dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
