--- a/app/src/main/res/layout/activity_item_create.xml
+++ b/app/src/main/res/layout/activity_item_create.xml
@@ -205,7 +205,7 @@
             android:id="@+id/editBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="수정 ON"
+            android:text="수정 OFF"
             android:textSize="14dp"
             android:textColor="#FFFFFF"
             android:paddingHorizontal="32dp"
