--- a/app/src/main/res/layout/activity_item_create.xml
+++ b/app/src/main/res/layout/activity_item_create.xml
@@ -10,7 +10,7 @@
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="사이트 명"
+        android:text="보드 생성"
         android:textSize="20dp"
         android:layout_marginTop="32dp"
         android:textColor="@color/colorPrimary"
